--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "sequelize": "^6.37.1",
     "socket.io": "^4.7.5",
     "twilio": "^5.0.4",
-    "uuid": "^9.0.1",
-    "ws": "^8.17.0"
+    "uuid": "^9.0.1"
+    
   }
 }
